force-app/main/default/objects/SMSServiceSettings__mdt/SMSServiceSettings__mdt.object-meta.xml
<CustomObject>
    <description>Settings of the SMS Service on each country</description>
    <label>SMS Service Setting</label>
    <pluralLabel>SMS Service Setting</pluralLabel>
</CustomObject>