force-app/main/default/objects/SMSServiceSettings__mdt/fields/Pass__c.field-meta.xml
<CustomField>
    <fullName>Pass__c</fullName>
    <label>Pass</label>
    <length>200</length>
    <type>Text</type>
</CustomField>