force-app/main/default/objects/SMSServiceSettings__mdt/fields/Url__c.field-meta.xml
<CustomField>
    <fullName>Url__c</fullName>
    <label>Url</label>
    <length>200</length>
    <type>Text</type>
</CustomField>